# SimpleITK

./: .gitattributes  CMakeLists.txt  Version.cmake
.github/actions/external-data-cache/: action.yml
.github/actions/package_csharp/: action.yml
.github/actions/package_csharp/scripts/: mac_build_csharp.sh
.github/actions/package_python/: action.yml
.github/actions/package_python/scripts/: win_build_python.sh
.github/workflows/: BatchBuild.yml  Build.yml  Nightly.yml  Package.yml
CMake/: sitkITKFetchContent.cmake
Code/ElastixTransformixWrappers/: CMakeLists.txt
Code/ElastixTransformixWrappers/src/: sitkTransformixImageFilter.cxx
Code/IO/include/: sitkImageViewer.h
Examples/: CMakeLists.txt  index.rst
Examples/SubDimensionProcess/: CMakeLists.txt  Documentation.rst  SubDimensionProcess.py
SuperBuild/: External_ITK.cmake  External_Swig.cmake
Testing/CI/Azure/: azure-pipelines.yml
Testing/Unit/: sitkDemonsRegistrationTests.cxx
Utilities/Distribution/MacARM/: build_all.sh  mac_build_py.sh
Utilities/Distribution/manylinux/imagefiles/: cmd.sh
Wrapping/Java/: CMakeLists.txt  Java.i
Wrapping/Python/: CMakeLists.txt  Python.i
Wrapping/R/Packaging/SimpleITK/man/: sitkRdfiles.tar.gz.sha512
docs/source/: link_SubDimensionProcess_docs.rst
docs/source/release_notes/: index.rst  notes-v2.5.4.md
